k8s/fastapi.yml
apiVersion: v1
kind: Service
metadata:
  name: fastapi
  namespace: demo
spec:
  type: ClusterIP
  selector:
    app: fastapi
  ports:
  - port: 80
    targetPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi
  namespace: demo
spec:
  selector:
    matchLabels:
      app: fastapi
  template:
    metadata:
      labels:
        app: fastapi
    spec:
      containers:
      - name: fastapi
        image: ryojpn/fastapi-async-mysql
        resources:
          limits:
            memory: 128Mi
            cpu: 500m
        ports:
        - containerPort: 8000
